--- a/BlazorApp3/Client/wwwroot/index.html
+++ b/BlazorApp3/Client/wwwroot/index.html
@@ -26,6 +26,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="test.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="tBarScript.js"></script>
 </body>
 
 </html>
