--- a/BlazorApp3/Client/wwwroot/index.html
+++ b/BlazorApp3/Client/wwwroot/index.html
@@ -27,6 +27,12 @@
     <script src="test.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="tBarScript.js"></script>
+
+    <script src="https://js.braintreegateway.com/web/dropin/1.31.1/js/dropin.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.79.1/js/client.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.79.1/js/paypal-checkout.min.js"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AUiGr3FOSHrsVSTbFwS_NFq8g-fGt1ovVj0LY9f0D260rprZgDB-VL8-Ww0Gwz4bsShhLz0YG8iawmjf"></script>
+    <script src="Deposit.js"></script>
 </body>
 
 </html>
