--- a/BlazorApp3/Client/wwwroot/index.html
+++ b/BlazorApp3/Client/wwwroot/index.html
@@ -122,9 +122,9 @@
 </style>
 
 <body>
-    <div id="app"></div>
+    <div id="app"><div class="lds-roller" style="position: absolute;top: 50%;left: 50%;"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
     <!--<div class="loader" style="position: absolute;top: 50%;left: 50%;"></div>-->
-    <div class="lds-roller" style="position: absolute;top: 50%;left: 50%;"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    <!--<div class="lds-roller" style="position: absolute;top: 50%;left: 50%;"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>-->
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
