--- a/BlazorApp3/MauiApp2/wwwroot/index.html
+++ b/BlazorApp3/MauiApp2/wwwroot/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MauiApp2</title>
     <base href="/" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="MauiApp2.styles.css" rel="stylesheet" />
-    <link href="manifest.json" rel="manifest" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
+
 <style>
     .lds-roller {
         display: inline-block;
