--- a/BlazorApp3/Client/wwwroot/index.html
+++ b/BlazorApp3/Client/wwwroot/index.html
@@ -13,6 +13,8 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+<link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <style>
     .lds-roller {
@@ -139,6 +141,7 @@
     <script src="Deposit.js"></script>
     <script src="test.js"></script>
     <script src="UserAgent.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
