--- a/BlazorMovie/Maui/wwwroot/index.html
+++ b/BlazorMovie/Maui/wwwroot/index.html
@@ -1,144 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maui</title>
-    <base href="/" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="BlazorMovie.Maui.styles.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <style>
-        .lds-roller {
-            display: inline-block;
-            position: relative;
-            width: 80px;
-            height: 80px;
-        }
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Maui</title>
+	<base href="/" />
+	<!--<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+	<link href="css/app.css" rel="stylesheet" />-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link href="BlazorMovie.Maui.styles.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+	<link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+	<style>
+		.lds-roller {
+			display: inline-block;
+			position: relative;
+			width: 80px;
+			height: 80px;
+		}
 
-            .lds-roller div {
-                animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-                transform-origin: 40px 40px;
-            }
+			.lds-roller div {
+				animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+				transform-origin: 40px 40px;
+			}
 
-                .lds-roller div:after {
-                    content: " ";
-                    display: block;
-                    position: absolute;
-                    width: 7px;
-                    height: 7px;
-                    border-radius: 50%;
-                    background: #808080;
-                    margin: -4px 0 0 -4px;
-                }
+				.lds-roller div:after {
+					content: " ";
+					display: block;
+					position: absolute;
+					width: 7px;
+					height: 7px;
+					border-radius: 50%;
+					background: #808080;
+					margin: -4px 0 0 -4px;
+				}
 
-                .lds-roller div:nth-child(1) {
-                    animation-delay: -0.036s;
-                }
+				.lds-roller div:nth-child(1) {
+					animation-delay: -0.036s;
+				}
 
-                    .lds-roller div:nth-child(1):after {
-                        top: 63px;
-                        left: 63px;
-                    }
+					.lds-roller div:nth-child(1):after {
+						top: 63px;
+						left: 63px;
+					}
 
-                .lds-roller div:nth-child(2) {
-                    animation-delay: -0.072s;
-                }
+				.lds-roller div:nth-child(2) {
+					animation-delay: -0.072s;
+				}
 
-                    .lds-roller div:nth-child(2):after {
-                        top: 68px;
-                        left: 56px;
-                    }
+					.lds-roller div:nth-child(2):after {
+						top: 68px;
+						left: 56px;
+					}
 
-                .lds-roller div:nth-child(3) {
-                    animation-delay: -0.108s;
-                }
+				.lds-roller div:nth-child(3) {
+					animation-delay: -0.108s;
+				}
 
-                    .lds-roller div:nth-child(3):after {
-                        top: 71px;
-                        left: 48px;
-                    }
+					.lds-roller div:nth-child(3):after {
+						top: 71px;
+						left: 48px;
+					}
 
-                .lds-roller div:nth-child(4) {
-                    animation-delay: -0.144s;
-                }
+				.lds-roller div:nth-child(4) {
+					animation-delay: -0.144s;
+				}
 
-                    .lds-roller div:nth-child(4):after {
-                        top: 72px;
-                        left: 40px;
-                    }
+					.lds-roller div:nth-child(4):after {
+						top: 72px;
+						left: 40px;
+					}
 
-                .lds-roller div:nth-child(5) {
-                    animation-delay: -0.18s;
-                }
+				.lds-roller div:nth-child(5) {
+					animation-delay: -0.18s;
+				}
 
-                    .lds-roller div:nth-child(5):after {
-                        top: 71px;
-                        left: 32px;
-                    }
+					.lds-roller div:nth-child(5):after {
+						top: 71px;
+						left: 32px;
+					}
 
-                .lds-roller div:nth-child(6) {
-                    animation-delay: -0.216s;
-                }
+				.lds-roller div:nth-child(6) {
+					animation-delay: -0.216s;
+				}
 
-                    .lds-roller div:nth-child(6):after {
-                        top: 68px;
-                        left: 24px;
-                    }
+					.lds-roller div:nth-child(6):after {
+						top: 68px;
+						left: 24px;
+					}
 
-                .lds-roller div:nth-child(7) {
-                    animation-delay: -0.252s;
-                }
+				.lds-roller div:nth-child(7) {
+					animation-delay: -0.252s;
+				}
 
-                    .lds-roller div:nth-child(7):after {
-                        top: 63px;
-                        left: 17px;
-                    }
+					.lds-roller div:nth-child(7):after {
+						top: 63px;
+						left: 17px;
+					}
 
-                .lds-roller div:nth-child(8) {
-                    animation-delay: -0.288s;
-                }
+				.lds-roller div:nth-child(8) {
+					animation-delay: -0.288s;
+				}
 
-                    .lds-roller div:nth-child(8):after {
-                        top: 56px;
-                        left: 12px;
-                    }
+					.lds-roller div:nth-child(8):after {
+						top: 56px;
+						left: 12px;
+					}
 
-        @keyframes lds-roller {
-            0% {
-                transform: rotate(0deg);
-            }
+		@keyframes lds-roller {
+			0% {
+				transform: rotate(0deg);
+			}
 
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
+			100% {
+				transform: rotate(360deg);
+			}
+		}
+	</style>
 </head>
 
 <body>
 
-    <app><div><div class="lds-roller" style="position: absolute;top: 50%;left: 50%;"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div></app>
+	<div id="app"><div class="lds-roller" style="position: absolute;top: 50%;left: 50%;"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
+	<div id="blazor-error-ui">
+		An unhandled error has occurred.
+		<a href="" class="reload">Reload</a>
+		<a class="dismiss">🗙</a>
+	</div>
 
-    <script src="_framework/blazor.webview.js" autostart="false"></script>
-    <script src="tBarScript.js"></script>
-    <script src="https://js.braintreegateway.com/web/dropin/1.31.1/js/dropin.min.js"></script>
-    <script src="https://js.braintreegateway.com/web/3.79.1/js/client.min.js"></script>
-    <script src="https://js.braintreegateway.com/web/3.79.1/js/paypal-checkout.min.js"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=AUiGr3FOSHrsVSTbFwS_NFq8g-fGt1ovVj0LY9f0D260rprZgDB-VL8-Ww0Gwz4bsShhLz0YG8iawmjf"></script>
-    <script src="Deposit.js"></script>
-    <script src="test.js"></script>
-    <script src="UserAgent.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
+	<script src="_framework/blazor.webview.js" autostart="false"></script>
+	<script src="tBarScript.js"></script>
+	<script src="https://js.braintreegateway.com/web/dropin/1.31.1/js/dropin.min.js"></script>
+	<script src="https://js.braintreegateway.com/web/3.79.1/js/client.min.js"></script>
+	<script src="https://js.braintreegateway.com/web/3.79.1/js/paypal-checkout.min.js"></script>
+	<script src="https://www.paypal.com/sdk/js?client-id=AUiGr3FOSHrsVSTbFwS_NFq8g-fGt1ovVj0LY9f0D260rprZgDB-VL8-Ww0Gwz4bsShhLz0YG8iawmjf"></script>
+	<script src="Deposit.js"></script>
+	<script src="test.js"></script>
+	<script src="UserAgent.js"></script>
+	<script src="_content/MudBlazor/MudBlazor.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
