--- a/BlazorMovie/Client/wwwroot/index.html
+++ b/BlazorMovie/Client/wwwroot/index.html
@@ -137,6 +137,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="tBarScript.js"></script>
     <script src="https://js.braintreegateway.com/web/dropin/1.31.1/js/dropin.min.js"></script>
     <script src="https://js.braintreegateway.com/web/3.79.1/js/client.min.js"></script>
